--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -25,6 +25,9 @@
 <p  class = "paragraph-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
     Ab fuga id incidunt laborum maxime nam necessitatibus nihil, nobis numquam officia, quae ratione
     similique. Accusantium atque ipsam libero neque repellendus voluptas!</p>
+<p  class = "paragraph-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Ab fuga id incidunt laborum maxime nam necessitatibus nihil, nobis numquam officia, quae ratione
+    similique. Accusantium atque ipsam libero neque repellendus voluptas!</p>
 <div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
     Ab fuga id incidunt laborum maxime nam necessitatibus nihil, nobis numquam officia, quae ratione
@@ -50,4 +53,4 @@
 </oi>
 <img src="G:\Мой диск\Программирование\Занятия\Модуль 4\lesson_2\5656d35727009cabea6ce79973a9702c.jpeg">
 </body>
-</html>hfhgfhg
+</html>
