--- a/lesson_3/html_2.html
+++ b/lesson_3/html_2.html
@@ -8,7 +8,7 @@
     <title>html 2</title>
 </head>
 <body>
-     Вернуться на первую страницу -> <a href="html_1.html">клик</a>
+     Вернуться на первую страницу -> <a href="LESSON_3.html">клик</a>
 
 </body>
 </html>
